fix(events): prevent mobile layout overflow
Refs: HRINFO-1233

--- a/html/themes/custom/common_design_subtheme/components/hri-events/hri-events.css
+++ b/html/themes/custom/common_design_subtheme/components/hri-events/hri-events.css
@@ -92,6 +92,12 @@
   display: none;
 }
 
+/* haxx to make sure mobile dialog doesn't overflow */
+.ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.ui-draggable.ui-resizable {
+  max-width: calc(100% - 2rem);
+  margin: 0 1rem;
+}
+
 /* Horizontal layout for wider phones, tablets, desktop */
 @media (min-width: 540px) {
   .hri-event {
